# django-axes

./: .coveragerc  .coveralls.yml  .gitignore  .hgignore  .hgtags  .project  .prospector.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.rst  codecov.yml  manage.py  merlin.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-qa.txt  requirements-test.txt  requirements.txt  runtests.py  runtests_num_proxies.py  runtests_proxy.py  runtests_proxy_custom_header.py  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  codeql.yml  release.yml  test.yml
axes/: __init__.py  admin.py  apps.py  attempts.py  backends.py  checks.py  conf.py  decorators.py  exceptions.py  handlers.py  helpers.py  middleware.py  models.py  request.py  settings.py  signals.py  test_settings.py  test_settings_cache.py  test_settings_num_proxies.py  test_settings_proxy.py  test_settings_proxy_custom_header.py  test_urls.py  tests.py  utils.py  views.py
axes/handlers/: base.py  cache.py  database.py  dummy.py  proxy.py  test.py
axes/locale/ar/LC_MESSAGES/: django.mo  django.po
axes/locale/de/LC_MESSAGES/: django.mo  django.po
axes/locale/fa/LC_MESSAGES/: django.mo  django.po
axes/locale/fr/LC_MESSAGES/: django.mo  django.po
axes/locale/id/LC_MESSAGES/: django.mo  django.po
axes/locale/nl/LC_MESSAGES/: django.mo  django.po
axes/locale/pl/LC_MESSAGES/: django.mo  django.po
axes/management/commands/: axes_cleanup.py  axes_delete_access_logs.py  axes_list_attempts.py  axes_reset.py  axes_reset_failure_logs.py  axes_reset_ip.py  axes_reset_ip_username.py  axes_reset_logs.py  axes_reset_user.py  axes_reset_username.py
axes/migrations/: 0001_initial.py  0002_auto_20151217_2044.py  0002_auto__add_field_accessattempt_user.py  0002_auto__add_field_accessattempt_user.py~  0003_auto_20160322_0929.py  0004_auto_20181024_1538.py  0005_remove_accessattempt_trusted.py  0005_useraccessfailurelog.py  0006_auto_20181212_0419.py  0006_remove_accesslog_trusted.py  0007_alter_accessattempt_unique_together.py  0007_auto_20210606_2037.py  0008_accessfailurelog.py  0009_accesslog_user.py  0009_add_session_hash.py  0009_alter_accessattempt_attempt_time_and_more.py  0010_accessattempt_expires_at.py  0010_accessattemptexpiration.py  0011_alter_accessattempt_username.py
axes/tests/: base.py  compatibility.py  settings.py  test_access_attempt.py  test_access_attempt_config.py  test_admin.py  test_apps.py  test_attempt.py  test_attempts.py  test_backends.py  test_checks.py  test_decorators.py  test_handlers.py  test_helpers.py  test_logging.py  test_login.py  test_management.py  test_management_commands.py  test_middleware.py  test_models.py  test_proxy.py  test_signals.py  test_utils.py  test_views.py
docs/: 10_changelog.rst  10_reference.rst  1_requirements.rst  2_installation.rst  3_usage.rst  4_configuration.rst  5_customization.rst  6_integration.rst  7_architecture.rst  7_migration.rst  7_upgrading.rst  8_development.rst  8_reference.rst  9_architecture.rst  9_development.rst  Makefile  architecture.rst  captcha.rst  conf.py  configuration.rst  development.rst  index.rst  installation.rst  integration.rst  issues.rst  migration.rst  requirements.rst  usage.rst
docs/_static/css/: custom_theme.css
examples/: README.rst  install.sh  reinstall.sh  test.sh  uninstall.sh
examples/example/: local_settings.example  settings.py  urls.py
locale/de/LC_MESSAGES/: django.mo  django.po
project/: settings.py  urls.py  wsgi.py
tests/: base.py  settings.py  test_admin.py  test_attempts.py  test_backends.py  test_checks.py  test_conf.py  test_decorators.py  test_failures.py  test_handlers.py  test_helpers.py  test_logging.py  test_login.py  test_management.py  test_middleware.py  test_models.py  test_signals.py  test_utils.py  urls_empty.py
(+5 files in other folders)
