[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov axes --cov-append --cov-branch --cov-report term-missing --cov-report=xml"
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{310,311,312}-dj42
    py{310,311,312,313}-dj52
    py{312,313,314}-dj60
    py312-djmain
    py312-djqa

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314

[gh-actions:env]
DJANGO =
    4.2: dj42
    5.2: dj52
    6.0: dj60
    main: djmain
    qa: djqa

# Normal test environment runs pytest which orchestrates other tools
[testenv]
deps =
    -r requirements-test.txt
    dj42: django>=4.2,<5
    dj52: django>=5.2,<6
    dj60: django>=6.0,<7
    djmain: https://github.com/django/django/archive/main.tar.gz
usedevelop = true
commands = pytest
setenv =
    PYTHONDONTWRITEBYTECODE=1
# Django development version is allowed to fail the test matrix
ignore_outcome =
    djmain: True
ignore_errors =
    djmain: True

# QA runs type checks, linting, and code formatting checks
[testenv:py312-djqa]
deps = -r requirements-qa.txt
commands =
    mypy axes
    prospector
    black -t py312 --check --diff axes
"""
